# egg-drop

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
benches/: egg_drop.rs  rec.rs
reports/: index.html
reports/1-vec-lfm/: index.html
reports/1-vec-lfm/Egg Drop/1000/: index.html
reports/1-vec-lfm/Egg Drop/600/: index.html
reports/1-vec-lfm/Egg Drop/800/: index.html
reports/1-vec-lfm/Egg Drop/900/: index.html
reports/1-vec-lfm/Egg Drop/Simple DP/: index.html
reports/10-avoid-step_by/Egg Drop/: index.html
reports/11-env2/: index.html
reports/11-env2/Egg Drop/: index.html
reports/11-env2/Egg Drop/20/: index.html
reports/12-row-vs-column/: index.html
reports/12-row-vs-column/Egg Drop/: index.html
reports/12-row-vs-column/Egg Drop/200/: index.html
reports/2-lfm/Egg Drop/: index.html
reports/3-fix-samples/: index.html
reports/3-fix-samples/Egg Drop/: index.html
reports/4-use-threadpool/Egg Drop/1000/: index.html
reports/6-use-unsafe/: index.html
reports/6-use-unsafe/Egg Drop/: index.html
reports/7-optimum-bsize1/: index.html
reports/7-optimum-bsize1/Egg Drop/: index.html
reports/7-optimum-bsize1/Egg Drop/100/: index.html
reports/8-optimum-bsize2/: index.html
reports/8-optimum-bsize2/Egg Drop/: index.html
reports/Egg Drop/700/: index.html
reports/Egg Drop/Parallel Simple DP/: index.html
src/: dp.rs  dptable.rs  fast_dp.rs  lib.rs  main.rs  par_dp.rs  par_fast_dp.rs  par_simple_dp.rs  rayon_par_dp.rs  rayon_par_fast_dp.rs  rec.rs  simple_dp.rs  simple_loop_dp.rs  simple_vec_dp.rs
(+71 files in other folders)
