[package]
name = "egg-drop"
version = "0.1.0"
edition = "2021"

[dependencies]
debug_print = "1.0.0"
lockfree = "0.5.1"
rayon = { version = "1.6.0", optional = true }
threadpool = "1.8.1"

[dev-dependencies]
criterion = "0.4.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[[bench]]
name = "egg_drop"
harness = false

# The bench profile inherits the settings from the release profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
